# cyphy_testbed

./: README.md
ws/src/controller/src/: mellinger_controller.cpp
ws/src/dd_controller/: CMakeLists.txt  package.xml
ws/src/dd_controller/include/dd_controller/: dd_controller.hpp
ws/src/dd_controller/src/: dd_controller.cpp
ws/src/demo_launchers/launch/: demo_core_lfd.launch  ext_control.launch  mnd_experiment.launch
ws/src/lfd_controller/: CMakeLists.txt  package.xml
ws/src/lfd_controller/config/data/: Ad.csv  Bd.csv  K.csv
ws/src/lfd_controller/exec/: lfd_controller_node.cpp
ws/src/lfd_controller/include/lfd_controller/: lfd_controller.hpp  lfd_controller_ros.hpp
ws/src/lfd_controller/src/: lfd_controller.cpp  lfd_controller_ros.cpp
ws/src/rarena/: arena_node.py  objects.yaml  rarena_node.py
ws/src/rarena/classes/: drone_object.py
ws/src/rarena/config/: atlas.json
ws/src/simulator/src/: simulator.cpp
